// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Print page 2 games and 2 events 1`] = `
"<!DOCTYPE html>
<html>

<head>
    <meta charset=\\"utf-8\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <title>Video Game Gallery by Zhykos.fr</title>
    <link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\">
    <link rel=\\"stylesheet\\" href=\\"https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css\\" />
    <link rel=\\"stylesheet\\" href=\\"css/compact-gallery.css\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"assets/img/gallery/logo.ico\\" />
</head>

<body>
    <section class=\\"gallery-block compact-gallery\\">
        <div class=\\"main\\">
            <div class=\\"heading\\">
                <img class=\\"img-fluid image\\" src=\\"assets/img/gallery/logo.png\\" style=\\"height: 100px;\\" />
                <h2>Video Game Gallery by Zhykos.fr</h2>
                Sheet index: <a
                    href=\\"https://docs.google.com/spreadsheets/d/1qRqKggPFYto2UyAYh8U66Z9pnXpmwbmwHkfwsMZrLZU/edit?usp=sharing\\">Google
                    Sheet</a><br />
                Go back to main website: <a href=\\"./index.html\\">Zhykos.fr</a><br /><br />
                Links index: <a href=\\"#screenshots\\">Screenshots</a> / <a href=\\"#events\\">Events</a>
            </div>
            <div class=\\"heading\\">
                <h3><a id=\\"screenshots\\"></a>Thomas \\"Zhykos\\"'screenshots</h3>
                2 games
            </div>
            <div class=\\"row no-gutters\\">
        <div class=\\"col-md-6 col-lg-3 item zoom-on-hover\\">
            <a class=\\"lightbox\\"
                href=\\"https://www.amazon.fr/photos/share/BhLQTEtDMf3evynYbZXEFKy9esdJJ0lCwo1k42J4YZB\\">
                <img class=\\"img-fluid image\\"
                    src=\\"assets/img/gallery/Castle-Crashers.jpg\\" />
                <span class=\\"description\\">
                    <span class=\\"description-heading\\">Castle Crashers</span><span class=\\"description-body\\">2008 - PC - None</span></span>
            </a>
        </div>
        <div class=\\"col-md-6 col-lg-3 item zoom-on-hover\\">
            <a class=\\"lightbox\\"
                href=\\"https://www.amazon.fr/photos/share/WSuZ5VcpUyNz6BXoGm43gxaBW4OWDoWv4ICxn2rstDV\\">
                <img class=\\"img-fluid image\\"
                    src=\\"assets/img/gallery/13-Sentinels-Aegis-Rim.jpg\\" />
                <span class=\\"description\\">
                    <span class=\\"description-heading\\">13 Sentinels: Aegis Rim</span><span class=\\"description-body\\">2020 - PlayStation 4 - FR</span></span>
            </a>
        </div>
            </div>
            <div class=\\"heading\\" style=\\"padding-top: 50px;\\">
                <h3><a id=\\"events\\"></a>Events</h3>
                2 events
            </div>
            <div class=\\"row no-gutters\\">
        <div class=\\"col-md-6 col-lg-3 item zoom-on-hover\\">
            <a class=\\"lightbox\\"
                href=\\"https://www.amazon.fr/photos/share/zGgsGvndsaFUtiCUYnWQVxlkU06eOHNWwCh3PR7Lg76\\">
                <img class=\\"img-fluid image\\"
                    src=\\"assets/img/gallery/Stunfest-2019.jpg\\" />
                <span class=\\"description\\">
                    <span class=\\"description-heading\\">Stunfest</span><span class=\\"description-body\\">2019 - France</span></span>
            </a>
        </div>
        <div class=\\"col-md-6 col-lg-3 item zoom-on-hover\\">
            <a class=\\"lightbox\\"
                href=\\"https://www.amazon.fr/photos/share/MzbIZOv4oDFcCURvoH1uFUq35FH6eLkUpFuMkZkpC57\\">
                <img class=\\"img-fluid image\\"
                    src=\\"assets/img/gallery/Micromania-Game-Show-2008.jpg\\" />
                <span class=\\"description\\">
                    <span class=\\"description-heading\\">Micromania Game Show</span><span class=\\"description-body\\">2008 - France</span></span>
            </a>
        </div>
            </div>
        </div>
        <br />
        <div>Logo made from 2 icons made by <a href=\\"https://www.freepik.com\\" title=\\"Freepik\\">Freepik</a> from <a
                href=\\"https://www.flaticon.com/\\" title=\\"Flaticon\\">www.flaticon.com</a></div>
    </section>
    <script src=\\"https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js\\"></script>
    <script>
        baguetteBox.run('.compact-gallery', { animation: 'slideIn' });
    </script>
</body>
</html>"
`;

exports[`Print page no game and no event 1`] = `
"<!DOCTYPE html>
<html>

<head>
    <meta charset=\\"utf-8\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <title>Video Game Gallery by Zhykos.fr</title>
    <link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\">
    <link rel=\\"stylesheet\\" href=\\"https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css\\" />
    <link rel=\\"stylesheet\\" href=\\"css/compact-gallery.css\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"assets/img/gallery/logo.ico\\" />
</head>

<body>
    <section class=\\"gallery-block compact-gallery\\">
        <div class=\\"main\\">
            <div class=\\"heading\\">
                <img class=\\"img-fluid image\\" src=\\"assets/img/gallery/logo.png\\" style=\\"height: 100px;\\" />
                <h2>Video Game Gallery by Zhykos.fr</h2>
                Sheet index: <a
                    href=\\"https://docs.google.com/spreadsheets/d/1qRqKggPFYto2UyAYh8U66Z9pnXpmwbmwHkfwsMZrLZU/edit?usp=sharing\\">Google
                    Sheet</a><br />
                Go back to main website: <a href=\\"./index.html\\">Zhykos.fr</a><br /><br />
                Links index: <a href=\\"#screenshots\\">Screenshots</a> / <a href=\\"#events\\">Events</a>
            </div>
            <div class=\\"heading\\">
                <h3><a id=\\"screenshots\\"></a>Thomas \\"Zhykos\\"'screenshots</h3>
                0 games
            </div>
            <div class=\\"row no-gutters\\">
            </div>
            <div class=\\"heading\\" style=\\"padding-top: 50px;\\">
                <h3><a id=\\"events\\"></a>Events</h3>
                0 events
            </div>
            <div class=\\"row no-gutters\\">
            </div>
        </div>
        <br />
        <div>Logo made from 2 icons made by <a href=\\"https://www.freepik.com\\" title=\\"Freepik\\">Freepik</a> from <a
                href=\\"https://www.flaticon.com/\\" title=\\"Flaticon\\">www.flaticon.com</a></div>
    </section>
    <script src=\\"https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js\\"></script>
    <script>
        baguetteBox.run('.compact-gallery', { animation: 'slideIn' });
    </script>
</body>
</html>"
`;

exports[`Print; screenshots range OK; events range OK 1`] = `
Object {
  "data": Array [
    60,
    33,
    68,
    79,
    67,
    84,
    89,
    80,
    69,
    32,
    104,
    116,
    109,
    108,
    62,
    10,
    60,
    104,
    116,
    109,
    108,
    62,
    10,
    10,
    60,
    104,
    101,
    97,
    100,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    109,
    101,
    116,
    97,
    32,
    99,
    104,
    97,
    114,
    115,
    101,
    116,
    61,
    34,
    117,
    116,
    102,
    45,
    56,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    109,
    101,
    116,
    97,
    32,
    104,
    116,
    116,
    112,
    45,
    101,
    113,
    117,
    105,
    118,
    61,
    34,
    88,
    45,
    85,
    65,
    45,
    67,
    111,
    109,
    112,
    97,
    116,
    105,
    98,
    108,
    101,
    34,
    32,
    99,
    111,
    110,
    116,
    101,
    110,
    116,
    61,
    34,
    73,
    69,
    61,
    101,
    100,
    103,
    101,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    109,
    101,
    116,
    97,
    32,
    110,
    97,
    109,
    101,
    61,
    34,
    118,
    105,
    101,
    119,
    112,
    111,
    114,
    116,
    34,
    32,
    99,
    111,
    110,
    116,
    101,
    110,
    116,
    61,
    34,
    119,
    105,
    100,
    116,
    104,
    61,
    100,
    101,
    118,
    105,
    99,
    101,
    45,
    119,
    105,
    100,
    116,
    104,
    44,
    32,
    105,
    110,
    105,
    116,
    105,
    97,
    108,
    45,
    115,
    99,
    97,
    108,
    101,
    61,
    49,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    116,
    105,
    116,
    108,
    101,
    62,
    86,
    105,
    100,
    101,
    111,
    32,
    71,
    97,
    109,
    101,
    32,
    71,
    97,
    108,
    108,
    101,
    114,
    121,
    32,
    98,
    121,
    32,
    90,
    104,
    121,
    107,
    111,
    115,
    46,
    102,
    114,
    60,
    47,
    116,
    105,
    116,
    108,
    101,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    108,
    105,
    110,
    107,
    32,
    114,
    101,
    108,
    61,
    34,
    115,
    116,
    121,
    108,
    101,
    115,
    104,
    101,
    101,
    116,
    34,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    104,
    116,
    116,
    112,
    115,
    58,
    47,
    47,
    109,
    97,
    120,
    99,
    100,
    110,
    46,
    98,
    111,
    111,
    116,
    115,
    116,
    114,
    97,
    112,
    99,
    100,
    110,
    46,
    99,
    111,
    109,
    47,
    98,
    111,
    111,
    116,
    115,
    116,
    114,
    97,
    112,
    47,
    52,
    46,
    48,
    46,
    48,
    47,
    99,
    115,
    115,
    47,
    98,
    111,
    111,
    116,
    115,
    116,
    114,
    97,
    112,
    46,
    109,
    105,
    110,
    46,
    99,
    115,
    115,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    108,
    105,
    110,
    107,
    32,
    114,
    101,
    108,
    61,
    34,
    115,
    116,
    121,
    108,
    101,
    115,
    104,
    101,
    101,
    116,
    34,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    104,
    116,
    116,
    112,
    115,
    58,
    47,
    47,
    99,
    100,
    110,
    106,
    115,
    46,
    99,
    108,
    111,
    117,
    100,
    102,
    108,
    97,
    114,
    101,
    46,
    99,
    111,
    109,
    47,
    97,
    106,
    97,
    120,
    47,
    108,
    105,
    98,
    115,
    47,
    98,
    97,
    103,
    117,
    101,
    116,
    116,
    101,
    98,
    111,
    120,
    46,
    106,
    115,
    47,
    49,
    46,
    49,
    48,
    46,
    48,
    47,
    98,
    97,
    103,
    117,
    101,
    116,
    116,
    101,
    66,
    111,
    120,
    46,
    109,
    105,
    110,
    46,
    99,
    115,
    115,
    34,
    32,
    47,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    108,
    105,
    110,
    107,
    32,
    114,
    101,
    108,
    61,
    34,
    115,
    116,
    121,
    108,
    101,
    115,
    104,
    101,
    101,
    116,
    34,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    99,
    115,
    115,
    47,
    99,
    111,
    109,
    112,
    97,
    99,
    116,
    45,
    103,
    97,
    108,
    108,
    101,
    114,
    121,
    46,
    99,
    115,
    115,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    108,
    105,
    110,
    107,
    32,
    114,
    101,
    108,
    61,
    34,
    105,
    99,
    111,
    110,
    34,
    32,
    116,
    121,
    112,
    101,
    61,
    34,
    105,
    109,
    97,
    103,
    101,
    47,
    120,
    45,
    105,
    99,
    111,
    110,
    34,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    97,
    115,
    115,
    101,
    116,
    115,
    47,
    105,
    109,
    103,
    47,
    103,
    97,
    108,
    108,
    101,
    114,
    121,
    47,
    108,
    111,
    103,
    111,
    46,
    105,
    99,
    111,
    34,
    32,
    47,
    62,
    10,
    60,
    47,
    104,
    101,
    97,
    100,
    62,
    10,
    10,
    60,
    98,
    111,
    100,
    121,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    115,
    101,
    99,
    116,
    105,
    111,
    110,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    103,
    97,
    108,
    108,
    101,
    114,
    121,
    45,
    98,
    108,
    111,
    99,
    107,
    32,
    99,
    111,
    109,
    112,
    97,
    99,
    116,
    45,
    103,
    97,
    108,
    108,
    101,
    114,
    121,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    100,
    105,
    118,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    109,
    97,
    105,
    110,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    100,
    105,
    118,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    104,
    101,
    97,
    100,
    105,
    110,
    103,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    105,
    109,
    103,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    105,
    109,
    103,
    45,
    102,
    108,
    117,
    105,
    100,
    32,
    105,
    109,
    97,
    103,
    101,
    34,
    32,
    115,
    114,
    99,
    61,
    34,
    97,
    115,
    115,
    101,
    116,
    115,
    47,
    105,
    109,
    103,
    47,
    103,
    97,
    108,
    108,
    101,
    114,
    121,
    47,
    108,
    111,
    103,
    111,
    46,
    112,
    110,
    103,
    34,
    32,
    115,
    116,
    121,
    108,
    101,
    61,
    34,
    104,
    101,
    105,
    103,
    104,
    116,
    58,
    32,
    49,
    48,
    48,
    112,
    120,
    59,
    34,
    32,
    47,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    104,
    50,
    62,
    86,
    105,
    100,
    101,
    111,
    32,
    71,
    97,
    109,
    101,
    32,
    71,
    97,
    108,
    108,
    101,
    114,
    121,
    32,
    98,
    121,
    32,
    90,
    104,
    121,
    107,
    111,
    115,
    46,
    102,
    114,
    60,
    47,
    104,
    50,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    83,
    104,
    101,
    101,
    116,
    32,
    105,
    110,
    100,
    101,
    120,
    58,
    32,
    60,
    97,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    104,
    116,
    116,
    112,
    115,
    58,
    47,
    47,
    100,
    111,
    99,
    115,
    46,
    103,
    111,
    111,
    103,
    108,
    101,
    46,
    99,
    111,
    109,
    47,
    115,
    112,
    114,
    101,
    97,
    100,
    115,
    104,
    101,
    101,
    116,
    115,
    47,
    100,
    47,
    49,
    113,
    82,
    113,
    75,
    103,
    103,
    80,
    70,
    89,
    116,
    111,
    50,
    85,
    121,
    65,
    89,
    104,
    56,
    85,
    54,
    54,
    90,
    57,
    112,
    110,
    88,
    112,
    109,
    119,
    98,
    109,
    119,
    72,
    107,
    102,
    119,
    115,
    77,
    90,
    114,
    76,
    90,
    85,
    47,
    101,
    100,
    105,
    116,
    63,
    117,
    115,
    112,
    61,
    115,
    104,
    97,
    114,
    105,
    110,
    103,
    34,
    62,
    71,
    111,
    111,
    103,
    108,
    101,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    83,
    104,
    101,
    101,
    116,
    60,
    47,
    97,
    62,
    60,
    98,
    114,
    32,
    47,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    71,
    111,
    32,
    98,
    97,
    99,
    107,
    32,
    116,
    111,
    32,
    109,
    97,
    105,
    110,
    32,
    119,
    101,
    98,
    115,
    105,
    116,
    101,
    58,
    32,
    60,
    97,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    46,
    47,
    105,
    110,
    100,
    101,
    120,
    46,
    104,
    116,
    109,
    108,
    34,
    62,
    90,
    104,
    121,
    107,
    111,
    115,
    46,
    102,
    114,
    60,
    47,
    97,
    62,
    60,
    98,
    114,
    32,
    47,
    62,
    60,
    98,
    114,
    32,
    47,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    76,
    105,
    110,
    107,
    115,
    32,
    105,
    110,
    100,
    101,
    120,
    58,
    32,
    60,
    97,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    35,
    115,
    99,
    114,
    101,
    101,
    110,
    115,
    104,
    111,
    116,
    115,
    34,
    62,
    83,
    99,
    114,
    101,
    101,
    110,
    115,
    104,
    111,
    116,
    115,
    60,
    47,
    97,
    62,
    32,
    47,
    32,
    60,
    97,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    35,
    101,
    118,
    101,
    110,
    116,
    115,
    34,
    62,
    69,
    118,
    101,
    110,
    116,
    115,
    60,
    47,
    97,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    100,
    105,
    118,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    100,
    105,
    118,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    104,
    101,
    97,
    100,
    105,
    110,
    103,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    104,
    51,
    62,
    60,
    97,
    32,
    105,
    100,
    61,
    34,
    115,
    99,
    114,
    101,
    101,
    110,
    115,
    104,
    111,
    116,
    115,
    34,
    62,
    60,
    47,
    97,
    62,
    84,
    104,
    111,
    109,
    97,
    115,
    32,
    34,
    90,
    104,
    121,
    107,
    111,
    115,
    34,
    39,
    115,
    99,
    114,
    101,
    101,
    110,
    115,
    104,
    111,
    116,
    115,
    60,
    47,
    104,
    51,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    49,
    32,
    103,
    97,
    109,
    101,
    115,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    100,
    105,
    118,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    100,
    105,
    118,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    114,
    111,
    119,
    32,
    110,
    111,
    45,
    103,
    117,
    116,
    116,
    101,
    114,
    115,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    100,
    105,
    118,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    99,
    111,
    108,
    45,
    109,
    100,
    45,
    54,
    32,
    99,
    111,
    108,
    45,
    108,
    103,
    45,
    51,
    32,
    105,
    116,
    101,
    109,
    32,
    122,
    111,
    111,
    109,
    45,
    111,
    110,
    45,
    104,
    111,
    118,
    101,
    114,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    97,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    108,
    105,
    103,
    104,
    116,
    98,
    111,
    120,
    34,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    104,
    116,
    116,
    112,
    115,
    58,
    47,
    47,
    119,
    119,
    119,
    46,
    97,
    109,
    97,
    122,
    111,
    110,
    46,
    102,
    114,
    47,
    112,
    104,
    111,
    116,
    111,
    115,
    47,
    115,
    104,
    97,
    114,
    101,
    47,
    66,
    104,
    76,
    81,
    84,
    69,
    116,
    68,
    77,
    102,
    51,
    101,
    118,
    121,
    110,
    89,
    98,
    90,
    88,
    69,
    70,
    75,
    121,
    57,
    101,
    115,
    100,
    74,
    74,
    48,
    108,
    67,
    119,
    111,
    49,
    107,
    52,
    50,
    74,
    52,
    89,
    90,
    66,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    105,
    109,
    103,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    105,
    109,
    103,
    45,
    102,
    108,
    117,
    105,
    100,
    32,
    105,
    109,
    97,
    103,
    101,
    34,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    115,
    114,
    99,
    61,
    34,
    97,
    115,
    115,
    101,
    116,
    115,
    47,
    105,
    109,
    103,
    47,
    103,
    97,
    108,
    108,
    101,
    114,
    121,
    47,
    67,
    97,
    115,
    116,
    108,
    101,
    45,
    67,
    114,
    97,
    115,
    104,
    101,
    114,
    115,
    46,
    106,
    112,
    103,
    34,
    32,
    47,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    115,
    112,
    97,
    110,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    100,
    101,
    115,
    99,
    114,
    105,
    112,
    116,
    105,
    111,
    110,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    115,
    112,
    97,
    110,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    100,
    101,
    115,
    99,
    114,
    105,
    112,
    116,
    105,
    111,
    110,
    45,
    104,
    101,
    97,
    100,
    105,
    110,
    103,
    34,
    62,
    67,
    97,
    115,
    116,
    108,
    101,
    32,
    67,
    114,
    97,
    115,
    104,
    101,
    114,
    115,
    60,
    47,
    115,
    112,
    97,
    110,
    62,
    60,
    115,
    112,
    97,
    110,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    100,
    101,
    115,
    99,
    114,
    105,
    112,
    116,
    105,
    111,
    110,
    45,
    98,
    111,
    100,
    121,
    34,
    62,
    50,
    48,
    48,
    56,
    32,
    45,
    32,
    80,
    67,
    32,
    45,
    32,
    78,
    111,
    110,
    101,
    60,
    47,
    115,
    112,
    97,
    110,
    62,
    60,
    47,
    115,
    112,
    97,
    110,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    97,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    100,
    105,
    118,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    100,
    105,
    118,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    100,
    105,
    118,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    104,
    101,
    97,
    100,
    105,
    110,
    103,
    34,
    32,
    115,
    116,
    121,
    108,
    101,
    61,
    34,
    112,
    97,
    100,
    100,
    105,
    110,
    103,
    45,
    116,
    111,
    112,
    58,
    32,
    53,
    48,
    112,
    120,
    59,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    104,
    51,
    62,
    60,
    97,
    32,
    105,
    100,
    61,
    34,
    101,
    118,
    101,
    110,
    116,
    115,
    34,
    62,
    60,
    47,
    97,
    62,
    69,
    118,
    101,
    110,
    116,
    115,
    60,
    47,
    104,
    51,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    49,
    32,
    101,
    118,
    101,
    110,
    116,
    115,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    100,
    105,
    118,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    100,
    105,
    118,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    114,
    111,
    119,
    32,
    110,
    111,
    45,
    103,
    117,
    116,
    116,
    101,
    114,
    115,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    100,
    105,
    118,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    99,
    111,
    108,
    45,
    109,
    100,
    45,
    54,
    32,
    99,
    111,
    108,
    45,
    108,
    103,
    45,
    51,
    32,
    105,
    116,
    101,
    109,
    32,
    122,
    111,
    111,
    109,
    45,
    111,
    110,
    45,
    104,
    111,
    118,
    101,
    114,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    97,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    108,
    105,
    103,
    104,
    116,
    98,
    111,
    120,
    34,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    104,
    116,
    116,
    112,
    115,
    58,
    47,
    47,
    119,
    119,
    119,
    46,
    97,
    109,
    97,
    122,
    111,
    110,
    46,
    102,
    114,
    47,
    112,
    104,
    111,
    116,
    111,
    115,
    47,
    115,
    104,
    97,
    114,
    101,
    47,
    122,
    71,
    103,
    115,
    71,
    118,
    110,
    100,
    115,
    97,
    70,
    85,
    116,
    105,
    67,
    85,
    89,
    110,
    87,
    81,
    86,
    120,
    108,
    107,
    85,
    48,
    54,
    101,
    79,
    72,
    78,
    87,
    119,
    67,
    104,
    51,
    80,
    82,
    55,
    76,
    103,
    55,
    54,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    105,
    109,
    103,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    105,
    109,
    103,
    45,
    102,
    108,
    117,
    105,
    100,
    32,
    105,
    109,
    97,
    103,
    101,
    34,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    115,
    114,
    99,
    61,
    34,
    97,
    115,
    115,
    101,
    116,
    115,
    47,
    105,
    109,
    103,
    47,
    103,
    97,
    108,
    108,
    101,
    114,
    121,
    47,
    83,
    116,
    117,
    110,
    102,
    101,
    115,
    116,
    45,
    50,
    48,
    49,
    57,
    46,
    106,
    112,
    103,
    34,
    32,
    47,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    115,
    112,
    97,
    110,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    100,
    101,
    115,
    99,
    114,
    105,
    112,
    116,
    105,
    111,
    110,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    115,
    112,
    97,
    110,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    100,
    101,
    115,
    99,
    114,
    105,
    112,
    116,
    105,
    111,
    110,
    45,
    104,
    101,
    97,
    100,
    105,
    110,
    103,
    34,
    62,
    83,
    116,
    117,
    110,
    102,
    101,
    115,
    116,
    60,
    47,
    115,
    112,
    97,
    110,
    62,
    60,
    115,
    112,
    97,
    110,
    32,
    99,
    108,
    97,
    115,
    115,
    61,
    34,
    100,
    101,
    115,
    99,
    114,
    105,
    112,
    116,
    105,
    111,
    110,
    45,
    98,
    111,
    100,
    121,
    34,
    62,
    50,
    48,
    49,
    57,
    32,
    45,
    32,
    70,
    114,
    97,
    110,
    99,
    101,
    60,
    47,
    115,
    112,
    97,
    110,
    62,
    60,
    47,
    115,
    112,
    97,
    110,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    97,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    100,
    105,
    118,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    100,
    105,
    118,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    100,
    105,
    118,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    98,
    114,
    32,
    47,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    100,
    105,
    118,
    62,
    76,
    111,
    103,
    111,
    32,
    109,
    97,
    100,
    101,
    32,
    102,
    114,
    111,
    109,
    32,
    50,
    32,
    105,
    99,
    111,
    110,
    115,
    32,
    109,
    97,
    100,
    101,
    32,
    98,
    121,
    32,
    60,
    97,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    104,
    116,
    116,
    112,
    115,
    58,
    47,
    47,
    119,
    119,
    119,
    46,
    102,
    114,
    101,
    101,
    112,
    105,
    107,
    46,
    99,
    111,
    109,
    34,
    32,
    116,
    105,
    116,
    108,
    101,
    61,
    34,
    70,
    114,
    101,
    101,
    112,
    105,
    107,
    34,
    62,
    70,
    114,
    101,
    101,
    112,
    105,
    107,
    60,
    47,
    97,
    62,
    32,
    102,
    114,
    111,
    109,
    32,
    60,
    97,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    104,
    114,
    101,
    102,
    61,
    34,
    104,
    116,
    116,
    112,
    115,
    58,
    47,
    47,
    119,
    119,
    119,
    46,
    102,
    108,
    97,
    116,
    105,
    99,
    111,
    110,
    46,
    99,
    111,
    109,
    47,
    34,
    32,
    116,
    105,
    116,
    108,
    101,
    61,
    34,
    70,
    108,
    97,
    116,
    105,
    99,
    111,
    110,
    34,
    62,
    119,
    119,
    119,
    46,
    102,
    108,
    97,
    116,
    105,
    99,
    111,
    110,
    46,
    99,
    111,
    109,
    60,
    47,
    97,
    62,
    60,
    47,
    100,
    105,
    118,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    47,
    115,
    101,
    99,
    116,
    105,
    111,
    110,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    115,
    99,
    114,
    105,
    112,
    116,
    32,
    115,
    114,
    99,
    61,
    34,
    104,
    116,
    116,
    112,
    115,
    58,
    47,
    47,
    99,
    100,
    110,
    106,
    115,
    46,
    99,
    108,
    111,
    117,
    100,
    102,
    108,
    97,
    114,
    101,
    46,
    99,
    111,
    109,
    47,
    97,
    106,
    97,
    120,
    47,
    108,
    105,
    98,
    115,
    47,
    98,
    97,
    103,
    117,
    101,
    116,
    116,
    101,
    98,
    111,
    120,
    46,
    106,
    115,
    47,
    49,
    46,
    49,
    48,
    46,
    48,
    47,
    98,
    97,
    103,
    117,
    101,
    116,
    116,
    101,
    66,
    111,
    120,
    46,
    109,
    105,
    110,
    46,
    106,
    115,
    34,
    62,
    60,
    47,
    115,
    99,
    114,
    105,
    112,
    116,
    62,
    10,
    32,
    32,
    32,
    32,
    60,
    115,
    99,
    114,
    105,
    112,
    116,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    98,
    97,
    103,
    117,
    101,
    116,
    116,
    101,
    66,
    111,
    120,
    46,
    114,
    117,
    110,
    40,
    39,
    46,
    99,
    111,
    109,
    112,
    97,
    99,
    116,
    45,
    103,
    97,
    108,
    108,
    101,
    114,
    121,
    39,
    44,
    32,
    123,
    32,
    97,
    110,
    105,
    109,
    97,
    116,
    105,
    111,
    110,
    58,
    32,
    39,
    115,
    108,
    105,
    100,
    101,
    73,
    110,
    39,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    60,
    47,
    115,
    99,
    114,
    105,
    112,
    116,
    62,
    10,
    60,
    47,
    98,
    111,
    100,
    121,
    62,
    10,
    60,
    47,
    104,
    116,
    109,
    108,
    62,
  ],
  "type": "Buffer",
}
`;
